@@ -1,4 +1,5 @@
 0.4.0 - currently working on
+- [#1804] Change: Use oelib
 - [#1805] Change: Use real visibility keywords and exceptions
 - [#1808] Change: Use static_info_tables instead of sr_static_info
 - [#1801] Change: Update the requirements to TYPO3 4.0 and PHP 5.1
